--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "BookStore is a simple, one-page application enabling users to search for free books available online in PDF or Audio format. Leveraging the Google Books API, it provides instant access to a vast repository of books by author or title.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack --mode development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "webpack": "^5.90.3"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^4.7.16",
+    "babel-loader": "^9.1.3",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^6.10.0",
+    "style-loader": "^3.3.4",
+    "webpack-cli": "^5.1.4"
   }
 }
